--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Ye Zhangqian's Homepage
-page-top-title: Ye Zhangqian
-top-section-bg-text: HOMEPAGE
-home-subtitle: Ye Zhangqian&ensp;|&ensp;叶张骞
-copyright-text: '&copy; Ye Zhangqian 2025-2026. All Rights Reserved.'
+title: Yourname's Homepage
+page-top-title: Yourname
+top-section-bg-text: Be what you wanna be
+home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
+copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
