--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Ye Zhangqian's Homepage
-page-top-title: YE ZHANGQIAN
+page-top-title: YE ZHANGQIAN 叶张骞
 top-section-bg-text: HOMEPAGE 叶张骞的个人主页
 home-subtitle: Ye Zhangqian&ensp;|&ensp;叶张骞
 copyright-text: '&copy; Ye Zhangqian 2023-2025. All Rights Reserved.'
